updated with results from dataset1 and daatset2

--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -147,15 +147,15 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/2\n",
-      "5483/5483 [==============================] - 1443s 263ms/step - loss: 0.3977 - accuracy: 0.8672\n",
+      "5483/5483 [==============================] - 1864s 339ms/step - loss: 0.3970 - accuracy: 0.8673\n",
       "Epoch 2/2\n",
-      "5483/5483 [==============================] - 1611s 294ms/step - loss: 0.3264 - accuracy: 0.8959\n"
+      "5483/5483 [==============================] - 1813s 331ms/step - loss: 0.3257 - accuracy: 0.8963\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.History at 0x2a470cc40>"
+       "<keras.src.callbacks.History at 0x2a28cdf00>"
       ]
      },
      "execution_count": 10,
@@ -178,8 +178,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1371/1371 [==============================] - 86s 62ms/step - loss: 0.3162 - accuracy: 0.9005\n",
-      "Loss: 0.3162, Accuracy: 0.9005\n"
+      "1371/1371 [==============================] - 114s 82ms/step - loss: 0.3172 - accuracy: 0.9011\n",
+      "Loss: 0.3172, Accuracy: 0.9011\n"
      ]
     }
    ],
@@ -208,20 +208,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1371/1371 [==============================] - 81s 59ms/step\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Classification metrics can't handle a mix of multilabel-indicator and multiclass targets",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m Y_pred \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39margmax(y_pred_prob, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)  \u001b[38;5;66;03m# Convert probabilities to class labels\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Print classification report\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m report \u001b[38;5;241m=\u001b[39m \u001b[43mclassification_report\u001b[49m\u001b[43m(\u001b[49m\u001b[43mY_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mY_pred\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(report)\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.10/site-packages/sklearn/metrics/_classification.py:2310\u001b[0m, in \u001b[0;36mclassification_report\u001b[0;34m(y_true, y_pred, labels, target_names, sample_weight, digits, output_dict, zero_division)\u001b[0m\n\u001b[1;32m   2195\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mclassification_report\u001b[39m(\n\u001b[1;32m   2196\u001b[0m     y_true,\n\u001b[1;32m   2197\u001b[0m     y_pred,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   2204\u001b[0m     zero_division\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwarn\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m   2205\u001b[0m ):\n\u001b[1;32m   2206\u001b[0m     \u001b[38;5;124;03m\"\"\"Build a text report showing the main classification metrics.\u001b[39;00m\n\u001b[1;32m   2207\u001b[0m \n\u001b[1;32m   2208\u001b[0m \u001b[38;5;124;03m    Read more in the :ref:`User Guide <classification_report>`.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   2307\u001b[0m \u001b[38;5;124;03m    <BLANKLINE>\u001b[39;00m\n\u001b[1;32m   2308\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 2310\u001b[0m     y_type, y_true, y_pred \u001b[38;5;241m=\u001b[39m \u001b[43m_check_targets\u001b[49m\u001b[43m(\u001b[49m\u001b[43my_true\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_pred\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   2312\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m labels \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   2313\u001b[0m         labels \u001b[38;5;241m=\u001b[39m unique_labels(y_true, y_pred)\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.10/site-packages/sklearn/metrics/_classification.py:95\u001b[0m, in \u001b[0;36m_check_targets\u001b[0;34m(y_true, y_pred)\u001b[0m\n\u001b[1;32m     92\u001b[0m     y_type \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmulticlass\u001b[39m\u001b[38;5;124m\"\u001b[39m}\n\u001b[1;32m     94\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(y_type) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m---> 95\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m     96\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mClassification metrics can\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt handle a mix of \u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[38;5;124m and \u001b[39m\u001b[38;5;132;01m{1}\u001b[39;00m\u001b[38;5;124m targets\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[1;32m     97\u001b[0m             type_true, type_pred\n\u001b[1;32m     98\u001b[0m         )\n\u001b[1;32m     99\u001b[0m     )\n\u001b[1;32m    101\u001b[0m \u001b[38;5;66;03m# We can't have more than one value on y_type => The set is no more needed\u001b[39;00m\n\u001b[1;32m    102\u001b[0m y_type \u001b[38;5;241m=\u001b[39m y_type\u001b[38;5;241m.\u001b[39mpop()\n",
-      "\u001b[0;31mValueError\u001b[0m: Classification metrics can't handle a mix of multilabel-indicator and multiclass targets"
+      "1371/1371 [==============================] - 99s 72ms/step\n"
      ]
     }
    ],
@@ -231,34 +218,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "139c4c83",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[3.2992646e-02, 9.4632351e-01, 2.0683812e-02],\n",
-       "       [1.1337916e-01, 7.3287839e-01, 1.5374251e-01],\n",
-       "       [1.0620408e-01, 8.1234616e-01, 8.1449859e-02],\n",
-       "       ...,\n",
-       "       [1.2344323e-02, 5.8772939e-04, 9.8706800e-01],\n",
-       "       [1.0494576e-01, 8.0829394e-01, 8.6760297e-02],\n",
-       "       [8.7330248e-03, 1.2386298e-03, 9.9002832e-01]], dtype=float32)"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Y_pred = np.argmax(y_pred_prob, axis=1)  # Convert probabilities to class labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "6a6eb25b",
    "metadata": {},
    "outputs": [],
@@ -268,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "81776115",
    "metadata": {},
    "outputs": [
@@ -278,13 +248,13 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.91      0.71      0.79      8038\n",
-      "           1       0.84      0.99      0.91     13637\n",
-      "           2       0.95      0.92      0.93     22184\n",
+      "    negative       0.91      0.71      0.80      8038\n",
+      "     neutral       0.84      0.99      0.91     13637\n",
+      "    positive       0.95      0.92      0.93     22184\n",
       "\n",
       "   micro avg       0.90      0.90      0.90     43859\n",
       "   macro avg       0.90      0.87      0.88     43859\n",
-      "weighted avg       0.90      0.90      0.90     43859\n",
+      "weighted avg       0.91      0.90      0.90     43859\n",
       " samples avg       0.90      0.90      0.90     43859\n",
       "\n"
      ]
@@ -292,13 +262,13 @@
    ],
    "source": [
     "# Print classification report\n",
-    "report = classification_report(Y_test, Y_pred)\n",
+    "report = classification_report(Y_test, Y_pred, target_names=['negative','neutral','positive'])\n",
     "print(report)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "0e763b00",
    "metadata": {},
    "outputs": [],
@@ -308,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "357cf5a6",
    "metadata": {},
    "outputs": [
@@ -316,7 +286,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9049756954616751 0.8983887567304977 0.9004765270526004\n"
+      "0.9056698504220665 0.898968630845834 0.9010693358261702\n"
      ]
     }
    ],
