--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -131,7 +131,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7400761531270663\n"
+      "Accuracy: 0.7404637588636311\n"
      ]
     }
    ],
@@ -151,7 +151,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7428064608296221 0.7172892530775871 0.7400761531270663\n"
+      "0.7429559171197867 0.7183387672051681 0.7404637588636311\n"
      ]
     }
    ],
@@ -179,12 +179,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "report = classification_report(Y_test, Y_pred)"
+    "report = classification_report(Y_test, Y_pred, target_names=['negative','neutral','positive'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "33e39b83",
    "metadata": {},
    "outputs": [
@@ -194,12 +194,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "          -1       0.75      0.28      0.41      8038\n",
-      "           0       0.76      0.76      0.76     13637\n",
-      "           1       0.73      0.90      0.80     22184\n",
+      "    negative       0.75      0.29      0.41      8038\n",
+      "     neutral       0.76      0.75      0.76     13637\n",
+      "    positive       0.73      0.90      0.80     22184\n",
       "\n",
       "    accuracy                           0.74     43859\n",
-      "   macro avg       0.75      0.64      0.66     43859\n",
+      "   macro avg       0.75      0.65      0.66     43859\n",
       "weighted avg       0.74      0.74      0.72     43859\n",
       "\n"
      ]
